2005-10-21  Frederic Ruaudel <grumz@grumz.net> 0.8

	* nact/nact.c: Fix the display of the existing config in nact's
main dialog by using uuid instead of label as index.

	* libnautilus-actions/nautilus-actions-config-schema.c: Fix
the schema generation by adding the list_type attribute for list
entries.

	* libnautilus-actions/nautilus-actions-config.c:
	* libnautilus-actions/nautilus-actions-config.h: Add a
function to create a NautilusActionsConfigAction object with
correct default values.

	* libnautilus-actions/nautilus-actions-config-gconf-private.h:
	* libnautilus-actions/nautilus-actions-config-gconf.c:
	* libnautilus-actions/nautilus-actions-config-schema.c:
	* libnautilus-actions/nautilus-actions-config-xml.c:
	* libnautilus-actions/nautilus-actions-config.c:
	* libnautilus-actions/nautilus-actions-config.h:
	* nact/nact-editor.c:
	* nact/nact.c:
	* plugin/nautilus-actions.c:
	* utils/nautilus-actions-new-config.c: Finish support for a icon 
in the menu item (Feature #28)

	* nact/nact-editor.c:
	* nact/nact.c: Remove global variables and replace with
the utility functions. Fix some gtk warnings.

	* nact/nact-utils.c:
	* nact/nact-utils.h:
	* nact/Makefile.am: Add some utility function to manage
Glade widgets more easily.

	* nact/nact-editor.c:
	* nact/nact.c: Refactor the code to take care of the new utilities
functions and of the refactored glade file. Start adding support for 
a menu icon.

	* nact/nautilus-actions-config.glade: Refactor the glade
file to be more HIG compliant and add missing widgets. Transfers
signals definition into it.

2005-10-20  Frederic Ruaudel <grumz@grumz.net> 0.8

	* libnautilus-actions/nautilus-actions-config.c: Fix a bug
in the freeing of the NautilusActionsConfigAction object and
don't send broken actions in the list returned by 
nautilus_actions_config_get_actions()

2005-10-19  Frederic Ruaudel <grumz@grumz.net> 0.8

	* plugin/nautilus-actions-module.c: Add GPL licence header 
comment

	* utils/Makefile.am: