@@ -1,0 +1,39 @@
+/* Nautilus Actions Tools
+ * Copyright (C) 2005 The GNOME Foundation
+ *
+ * Authors:
+ *  Frederic Ruaudel (grumz@grumz.net)
+ *
+ * This Program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License as
+ * published by the Free Software Foundation; either version 2 of the
+ * License, or (at your option) any later version.
+ *
+ * This Program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public
+ * License along with this Library; see the file COPYING.  If not,
+ * write to the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
+ * Boston, MA 02111-1307, USA.
+ */
+
+#ifndef NAUTILUS_ACTIONS_TOOLS_UTILS_H
+#define NAUTILUS_ACTIONS_TOOLS_UTILS_H
+
+#include <glib.h>
+
+G_BEGIN_DECLS
+
+gboolean nautilus_actions_file_set_contents (const gchar* filename, 
+															const gchar* contents,
+															gssize length,
+															GError** error);
+
+G_END_DECLS
+
+#endif /* NAUTILUS_ACTIONS_TOOLS_UTILS_H */
+
+// vim:ts=3:sw=3:tw=1024:cin
